svelte in all the places, single page for debugging

--- a/lib/crazy8_web/components/layouts/app.html.heex
+++ b/lib/crazy8_web/components/layouts/app.html.heex
@@ -4,6 +4,7 @@
   </header>
 </a>
 
-<main>
-  <.flash_group flash={@flash} /> <%= @inner_content %>
+<main class="h-full">
+  <.flash_group flash={@flash} />
+  <%= @inner_content %>
 </main>
