--- a/lib/crazy8_web/components/layouts/root.html.heex
+++ b/lib/crazy8_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="h-full">
     <%= @inner_content %>
   </body>
 </html>
